Реализовал логику работы с календарями и событиями